--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,8 @@ a {
         width: 100%;
         height: 33%;
         border-bottom: 1px solid #ddd;
+        	padding-left: 20px;
+	padding-right: 20px;
     }
 
     #main {
